<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Le Tréfle Royal</string>
    <string name="nom">Votre nom</string>
    <string name="solde">Votre solde</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="roulette_titre">Roulette</string>
    <string name="banque_titre">Banque</string>
    <string name="encouragement">Bonne chance !</string>
    <string name="commencer">Commencer</string>
    <string name="quitter">Quitter</string>
    <string name="montant_hint_banque">Le montant</string>
    <string name="valider">Valider</string>
    <string name="texte_demande_montant">Veuillez entrer le montant désiré :</string>
    <string name="jouer">Jouer</string>
    <string name="accroche_roulette">Faites vos jeux !</string>
    <string name="pair">Pair</string>
    <string name="impair">Impair</string>
    <string name="nbr_miser">Miser sur un nombre :</string>
    <string name="nbr_mise">Votre mise : </string>
</resources>